# tribe_crew

./: .env.example  =0.141.0  BUG_REPORT_AND_IMPROVEMENTS.md  ENHANCED_CREW_DESIGN.md  ENHANCED_IMPLEMENTATION_README.md  IMPROVEMENTS_SUMMARY.md  README.md  enhanced_crew.py  enhanced_main.py  enhanced_tasks.yaml  pyproject.toml  test_setup.py
config/: agents.yaml  tasks.yaml
input_files/: README.md  sample_client_brief.md
knowledge_base/: README.md  company_brand_values.md  temp.md
knowledge_base/brand/: Tribe Company_ Extended Analysis of the Dutch Live.md  company_brand_values.md
rag_storage/: rag_metadata.db
rag_storage/chroma_db/: chroma.sqlite3
results/: workflow_separated_20250725_143343.json
src/tribe_crew/: crew.py  main.py
src/tribe_crew/config/: agents.yaml  crew_config.yaml  tasks.yaml
src/tribe_crew/tools/: custom_tool.py  tools.py
