[project]
name = "tribe_crew"
version = "0.1.0"
description = "tribe-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pathlib2>=2.3.7; python_version<'3.4'"
]

[project.scripts]
tribe_crew = "tribe_crew.main:run"
run_crew = "tribe_crew.main:run"
train = "tribe_crew.main:train"
replay = "tribe_crew.main:replay"
test = "tribe_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
